# datascience-customer-support-gpt-demo

./: .env.templatae  .gitignore  Cargo.toml  MyMo OpenAI Assistant.md  db.sqlite-journal  postgres-docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  thread.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240204_120824_create_table.rs  m20240204_130004_create_thread_table.rs
src/: main.rs  openai.rs  thread.rs  user.rs  utils.rs
src/entity/: mod.rs  thread.rs  user.rs
www/: package-lock.json  package.json
www/src/: App.css  App.js  ChatPage.js  DemoPageNewUser.js  LoginPage.js  MainWindow.js
