[package]
name = "mymo-customer-service-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

actix-web = "4"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" , "with-json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
awc = { version = "3.4", features = ["openssl"]}
openssl = "0.10"
